<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="DUT_200SMART" Id="{df4fbfff-4a4e-459c-a62b-4448faab645e}">
    <Declaration><![CDATA[TYPE DUT_200SMART :
STRUCT
	iAlive:INT;//值1 持续1S  ,再值0持续1S，再次循环
	iInitCompleted:INT;//1=初始化完成
	iStatus:INT;//1=设备运行 2=设备停止(暂停)中 3=设备急停
	iResult:INT;//1=OK  2 =NG
	iError:INT;//1=设备正常  2=设备故障/报警 
	iBeltEnterEnable:INT;//1=允许进料   0=暂停进料
	iTemperatureReached:INT;//1=温度达到  0 =温度未达到
	iRev2:INT;//
	iRev3:INT;//
	iRev4:INT;//
	iRev5:INT;//
	
	iMachineMode:INT;//1=手动模式  2 =手动模式
	iMachineIniting:INT;//1=开始初始化  
	iMachineStart:INT;//1=设备启动
	iMachineStop:INT;//1=设备停止(暂停)
	iMachineEstop:INT;//1<>设备急停被按下
	iMachineDisable:INT;//1=设备屏蔽中
	iRev6:INT;//
	iRev7:INT;//
	iRev8:INT;//
	iRev9:INT;//
	iRev10:INT;//
	iRev11:INT;//
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>